# CommuGraph

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  USAGE_GUIDE.md  next.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/endpoints/: graph.py  upload.py
backend/app/core/: config.py
backend/app/models/: types.py
backend/app/parsers/: autogen_parser.py  base_parser.py
backend/app/schemas/: api.py
backend/app/services/: graph_builder.py  parser.py  session_manager.py
backend/tests/: conftest.py  test_graph_builder.py  test_parsers.py
commugraph/: cli.py
commugraph/configs/: default.yaml
commugraph/models/: types.py
commugraph/parsers/: base_parser.py
commugraph/ui/: app.py
commugraph/ui/pages/: graph_view.py
dev_docs/: UI_design.md  USER_INTERACTIONS.md  architecture_overview.md  build_process.md  claude_code_single_session_schema.md  graph_system_implementation.md  metrics_panel_specifications.md  parsers_and_metrics.md  session_metrics.md  tools_called.md
dev_docs/claude_code_chat_log/: PROCESS_MINING_IMPLEMENTATION_PLAN.md  claude_code_annotation_view_grouping.md  claude_code_workflow_view_grouping.md  graph_nodes_edges.md  record_ordering.md  understanding_claude_code_chat_log.md
dev_docs/legacy/: graph_system_implementation.md  multi_chatlog_design.md
dev_docs/meta_design/: frontend_backend_responsibilities.md  graph_visual_design.md  my_ideas.md  requirement_use_cases.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: README.md  mock_chat_history.jsonl
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  endpoints.ts  queryClient.ts
frontend/src/context/: AppContext.tsx
frontend/src/hooks/: useGraphData.ts  useTimelinePlayback.ts  useUpload.ts
frontend/src/types/: api.ts  graph.ts  index.ts
public/annotation_schema/: annotation_schema_v01.yaml  annotation_schema_v02.yaml
src/app/: globals.css  layout.tsx  page.tsx
src/context/: app-context.tsx
src/hooks/: use-annotation-data.ts  use-graph-data.ts  use-metrics-data.ts  use-timeline-playback.ts  use-upload.ts  use-workflow-data.ts
src/types/: api.ts  graph.ts
src/utils/: agent-naming.ts  api-client.ts  format.ts  graph-adapters.ts  tool-colors.ts  workflow-layout.ts
(+75 files in other folders)
