[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commugraph"
version = "0.1.0"
description = "Deep Analytics on Multi-Agent Chat Logs"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "CH-chuan", email = "chuanhe@udel.edu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "streamlit>=1.25.0",
    "plotly>=5.15.0",
    "pyvis>=0.3.2",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pyyaml>=6.0",
]

[project.scripts]
commugraph = "commugraph.cli:app"
commugraph-app = "commugraph.ui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["commugraph"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
ignore_missing_imports = true

