[tool.poetry]
name = "commugraph-backend"
version = "0.1.0"
description = "CommuGraph backend - Process mining and analytics for multi-agent chat logs"
authors = ["CommuGraph Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
networkx = "^3.2"
pandas = "^2.1.4"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
openai = "^1.7.0"
anthropic = "^0.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
ruff = "^0.1.9"
black = "^23.12.1"
mypy = "^1.8.0"
pandas-stubs = "^2.1.4.231227"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
